# -OLC2A-_Laboratorio_1S2023

./: README.md
Clase 2/: CMakeLists.txt  lex.yy.c  lexer.l  mainwindow.cpp  mainwindow.ui  parser.cpp  parser.hpp  parser.output  parser.tab.c  parser.tab.h  parser.y  parserctx.cpp  parserctx.hpp
clase 11/: CMakeLists.txt
clase 11/Compilador/: Simbolo.cpp  Simbolo.h  T_Simbolos.cpp  T_Simbolos.h
clase 11/Parser/: Lexer.l  generador.cpp  generador.h  lex.yy.c  parser.cpp  parser.hpp  parser.output
clase 11/ParserNodos/: Lexer.l  lex.yyN.c  location.hh  parser.cpp  parser.hpp  parser.output
clase 11/ParserNodos/AST/: AbsExpr.h  Resultado.cpp
clase 11/ParserNodos/AST/NoTerminal/: NT_Continue.cpp  NT_LSentencias.cpp  NT_LSentencias.h  NT_S.cpp  NT_else.h
clase 11/ParserNodos/AST/NoTerminal/Expr/: NT_Div.h  NT_Multi.h  NT_Operel.h  NT_Or.h  NT_Resta.cpp  NT_Resta.h  NT_Sum.cpp  NT_Sum.h
clase 11/ParserNodos/AST/Terminal/Expr/: T_Num_e.h
clase 12/: CMakeLists.txt  entrada funciones.txt  entrada.txt
clase 12/Compilador/: Funcion.cpp  Funcion.h  Simbolo.cpp  Simbolo.h  T_Funciones.cpp  T_Funciones.h  T_Simbolos.cpp  T_Simbolos.h
clase 12/Parser/: atributos.cpp  atributos.h  generador.cpp  generador.h  interfaz.cpp  parser.y
clase 12/ParserNodos/: Contexto.cpp  Contexto.h  Lexer.l  lex.yyN.c  parser.cpp  parser.hpp  parser.output  parserN.y
clase 12/ParserNodos/AST/: AbsExpr.cpp  Resultado.cpp  Resultado.h
clase 12/ParserNodos/AST/NoTerminal/: NT_Asig.cpp  NT_Asig.h  NT_Break.cpp  NT_Break.h  NT_Decla.cpp  NT_Decla.h  NT_Funcion.cpp  NT_Funcion.h  NT_If.cpp  NT_LExprLLamada.cpp  NT_LExprLLamada.h  NT_LLamada.cpp  NT_LLamada.h  NT_LParams.cpp  NT_LParams.h  NT_LSentencias.cpp  NT_Return.cpp  NT_Return.h
clase 12/ParserNodos/AST/NoTerminal/Expr/: NT_Div.cpp  NT_Operel.cpp  NT_Or.cpp
clase 12/ParserNodos/AST/Terminal/Expr/: T_ID_e.cpp  T_ID_e.h
clase 5/clase4/: CMakeLists.txt  entrada.txt  mainwindow.cpp  mainwindow.ui
clase 5/clase4/AST/: abstractexp.cpp  abstractexp.h
clase 5/clase4/AST/No_Terminales/: nt_asigvar.cpp  nt_bloque.cpp  nt_bloque.h  nt_declvar.cpp  nt_declvar.h  nt_imprimir.cpp  nt_imprimir.h  nt_listaexpr.cpp  nt_lsentencias.cpp  nt_lsentencias.h  nt_s.cpp  nt_sentencia.cpp  nt_sentencia.h  nt_tipo.cpp
clase 5/clase4/AST/No_Terminales/Expresiones/: nt_id.cpp  nt_negacion.cpp  nt_suma.cpp  nt_suma.h
clase 5/clase4/AST/Terminales/: t_id.cpp  t_numero.cpp  t_string.cpp
clase 5/clase4/Interprete/Contexto/: contexto.cpp  contexto.h  resultado.cpp  resultado.h
clase 5/clase4/Interprete/Contexto/Simbolos/: memoria.cpp  memoria.h  simbolo.cpp  simbolo.h
clase 5/clase4/Interprete/Contexto/Tipos/: t_tipos.cpp  t_tipos.h  tipo.cpp  tipo.h
clase 5/clase4/Parser/: interfaz.cpp  interfaz.h  parser.cpp  parser.hpp  parser.output  parser.y
clase1_ejemplo/: App.js  gramatica.jison  gramatica.js  package-lock.json  package.json
clase4/: CMakeLists.txt  entrada.txt  mainwindow.cpp  mainwindow.ui
clase4/AST/No_Terminales/: nt_asigvar.cpp  nt_asigvar.h  nt_bloque.cpp  nt_declvar.cpp  nt_imprimir.cpp  nt_listaexpr.h  nt_s.cpp  nt_s.h  nt_tipo.cpp  nt_tipo.h
clase4/AST/No_Terminales/Expresiones/: nt_id.cpp  nt_id.h  nt_negacion.cpp  nt_negacion.h  nt_suma.cpp
clase4/AST/Terminales/: t_id.cpp  t_id.h  t_numero.cpp  t_numero.h  t_string.cpp  t_string.h
clase4/Interprete/Contexto/: contexto.cpp  contexto.h  resultado.cpp  resultado.h
clase4/Parser/: Lexer.l  interfaz.cpp  interfaz.h  lex.yy.c  parser.cpp  parser.y
clase6/: CMakeLists.txt  entrada.txt  mainwindow.cpp  mainwindow.ui
clase6/Parser/: Lexer.l  atributos.cpp  atributos.h  generador.cpp  generador.h  interfaz.h  lex.yy.c  parser.cpp  parser.hpp  parser.output  parser.y
clase6/ParserNodos/: Contexto.cpp  Contexto.h  interfazN.cpp  interfazN.h  parser.y
clase6/ParserNodos/AST/: Resultado.h
clase6/ParserNodos/AST/NoTerminal/: NT_Continue.h  NT_If.h  NT_S.h  NT_While.cpp  NT_While.h  NT_else.cpp
clase6/ParserNodos/AST/NoTerminal/Expr/: NT_And.cpp  NT_And.h  NT_Multi.cpp
clase6/ParserNodos/AST/Terminal/Expr/: T_ID_e.cpp  T_Num_e.cpp
